--- a/index.html
+++ b/index.html
@@ -176,6 +176,6 @@
     </div>
 
     <audio id="audio-player"></audio>
-    <script src="app.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
