--- a/index.html
+++ b/index.html
@@ -167,10 +167,50 @@
                         </div>
                     </section>
 
-                    <!-- Charts & Artists Grid -->
+                    <!-- Main Grid: Left Column (Genres + Recent), Right Column (Top Charts) -->
                     <div class="grid grid-cols-1 xl:grid-cols-3 gap-10">
-                        <!-- Top Charts List -->
-                        <section class="xl:col-span-2">
+                        
+                        <!-- Left Column: Genres & Recently Listened -->
+                        <div class="xl:col-span-2 space-y-10">
+                            <!-- Genres Section -->
+                            <section>
+                                <div class="flex items-center justify-between mb-6 px-2">
+                                    <h2 class="text-2xl font-bold text-white">Genres</h2>
+                                    <a href="pages/genres.html" class="text-blue-500 text-xs font-bold hover:underline">Explore all</a>
+                                </div>
+                                <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+                                    <div class="aspect-square rounded-3xl bg-gradient-to-br from-pink-500 to-rose-600 p-6 flex flex-col justify-end premium-card cursor-pointer shadow-lg shadow-pink-500/10">
+                                        <span class="text-xl font-bold text-white">Pop</span>
+                                    </div>
+                                    <div class="aspect-square rounded-3xl bg-gradient-to-br from-purple-500 to-indigo-600 p-6 flex flex-col justify-end premium-card cursor-pointer shadow-lg shadow-purple-500/10">
+                                        <span class="text-xl font-bold text-white">Rock</span>
+                                    </div>
+                                    <div class="aspect-square rounded-3xl bg-gradient-to-br from-blue-500 to-cyan-600 p-6 flex flex-col justify-end premium-card cursor-pointer shadow-lg shadow-blue-500/10">
+                                        <span class="text-xl font-bold text-white">Hip Hop</span>
+                                    </div>
+                                    <div class="aspect-square rounded-3xl bg-gradient-to-br from-orange-500 to-amber-600 p-6 flex flex-col justify-end premium-card cursor-pointer shadow-lg shadow-orange-500/10">
+                                        <span class="text-xl font-bold text-white">Jazz</span>
+                                    </div>
+                                </div>
+                            </section>
+
+                            <!-- Recently Listened Section -->
+                            <section>
+                                <div class="flex items-center justify-between mb-6 px-2">
+                                    <h2 class="text-2xl font-bold text-white">Recently Listened</h2>
+                                    <a href="pages/recent.html" class="text-blue-500 text-xs font-bold hover:underline">View history</a>
+                                </div>
+                                <div class="bg-gray-800/20 rounded-[2rem] border border-gray-800/40 p-3">
+                                    <ul id="recent-songs-list" class="space-y-1">
+                                        <!-- This can be populated via app.js targeting this ID -->
+                                        <li class="p-4 text-center text-gray-500 italic">No recently played songs</li>
+                                    </ul>
+                                </div>
+                            </section>
+                        </div>
+
+                        <!-- Right Column: Top Charts (Moved Here) -->
+                        <section class="xl:col-span-1">
                             <div class="flex items-center justify-between mb-6 px-2">
                                 <h2 class="text-2xl font-bold text-white">Top Charts</h2>
                                 <p id="charts-subtitle" class="text-xs text-gray-500"></p>
@@ -179,17 +219,6 @@
                                 <ul id="top-charts-list" class="space-y-1">
                                     <!-- Populated by app.js -->
                                 </ul>
-                            </div>
-                        </section>
-
-                        <!-- Artists Cards -->
-                        <section>
-                            <div class="flex items-center justify-between mb-6 px-2">
-                                <h2 class="text-2xl font-bold text-white">Top Artists</h2>
-                                <a href="pages/artists.html" class="text-blue-500 text-xs font-bold hover:underline">See all</a>
-                            </div>
-                            <div id="top-artists-container" class="grid grid-cols-2 gap-4">
-                                <!-- Populated by app.js -->
                             </div>
                         </section>
                     </div>
@@ -216,7 +245,7 @@
                                 <svg width="22" height="22" fill="currentColor" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6 8.5 6V6z"/></svg>
                             </button>
                             <button id="play-pause-btn" class="w-12 h-12 bg-white text-black rounded-full flex items-center justify-center hover:scale-110 active:scale-95 transition-all shadow-xl">
-                                <span id="play-icon" class="text-lg ml-1">▶</span>
+                                <span id="play-icon" class="text-lg mr-1">▶</span>
                                 <span id="pause-icon" class="hidden text-lg">❚❚</span>
                             </button>
                             <button class="text-gray-500 hover:text-white transition-colors" id="next-btn">
@@ -241,7 +270,7 @@
                         <div class="hidden sm:flex items-center gap-3 text-gray-500 mr-4">
                              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2"><polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"/><path d="M15.54 8.46a5 5 0 0 1 0 7.07"/></svg>
                              <div class="w-20 h-1 bg-gray-800 rounded-full relative overflow-hidden">
-                                <div class="absolute inset-y-0 left-0 bg-gray-400 w-2/3"></div>
+                                <div class="absolute inset-y-0 right-0 bg-gray-400 w-2/3"></div>
                              </div>
                         </div>
                         <button id="mobile-play-pause-btn" class="md:hidden w-11 h-11 bg-white text-black rounded-full flex items-center justify-center font-bold">▶</button>
