--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             </button>
                         </div>
                         <!-- Placeholder image added for missing 'image_4385c5.png' to keep layout intact -->
-                        <img id="hero-image" src="https://placehold.co/320x320/2563eb/FFF?text=Music+Art" onerror="this.src='https://placehold.co/320x320/2563eb/FFF?text=Music+Art'" class="w-56 h-56 md:w-80 md:h-80 rounded-[2rem] object-cover shadow-2xl rotate-2 hover:rotate-0 transition-transform duration-500">
+                        <img id="hero-image" src="content/hero-baner.jpg" onerror="this.src='https://placehold.co/320x320/2563eb/FFF?text=Music+Art'" class="w-56 h-56 md:w-80 md:h-80 rounded-[2rem] object-cover shadow-2xl rotate-2 hover:rotate-0 transition-transform duration-500">
                     </section>
 
                     <!-- Grid Layout -->
@@ -200,7 +200,7 @@
                                     <a href="pages/genres.html" class="text-blue-500 text-xs font-bold hover:underline">Explore all</a>
                                 </div>
                                 <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-                                    <div class="aspect-square rounded-3xl bg-gradient-to-br from-pink-500 to-rose-600 p-6 flex flex-col justify-end premium-card shadow-lg"><span class="text-xl font-bold text-white">Pop</span></div>
+                                    <div class="aspect-square rounded-3xl bg-gradient-to-br from-pink-500 to-rose-600 p-6 flex flex-col justify-end premium-card shadow-lg" ><span class="text-xl font-bold text-white">Pop</span></div>
                                     <div class="aspect-square rounded-3xl bg-gradient-to-br from-purple-500 to-indigo-600 p-6 flex flex-col justify-end premium-card shadow-lg"><span class="text-xl font-bold text-white">Rock</span></div>
                                     <div class="aspect-square rounded-3xl bg-gradient-to-br from-blue-500 to-cyan-600 p-6 flex flex-col justify-end premium-card shadow-lg"><span class="text-xl font-bold text-white">Hip Hop</span></div>
                                     <div class="aspect-square rounded-3xl bg-gradient-to-br from-orange-500 to-amber-600 p-6 flex flex-col justify-end premium-card shadow-lg"><span class="text-xl font-bold text-white">Jazz</span></div>
